// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Progress /> Snapshots when determinate should render correctly 1`] = `
.emotion-2 {
  width: 100%;
  height: 0.375rem;
  background: #e1e4e5;
  border-radius: 0.375rem;
}

.emotion-0 {
  height: 100%;
  background: #2875c6 linear-gradient( 45deg, #2875c6 0%, #82e9ff 25%, #2875c6 75%, #82e9ff 100%);
  background-size: 400% 400%;
  border-radius: 0.375rem;
  -webkit-animation: progressBarAnimation 3s linear infinite;
  animation: progressBarAnimation 3s linear infinite;
  -webkit-transition: width 500ms ease-in;
  transition: width 500ms ease-in;
}

<div
  className="emotion-2 emotion-3"
>
  <div
    className="emotion-0 emotion-1"
    style={
      Object {
        "width": "10%",
      }
    }
  />
</div>
`;

exports[`<Progress /> Snapshots when full should render correctly 1`] = `
.emotion-2 {
  width: 100%;
  height: 0.375rem;
  background: #e1e4e5;
  border-radius: 0.375rem;
}

.emotion-0 {
  height: 100%;
  background: #2875c6;
  border-radius: 0.375rem;
  -webkit-animation: progressBarAnimation 3s linear infinite;
  animation: progressBarAnimation 3s linear infinite;
  -webkit-transition: width 500ms ease-in;
  transition: width 500ms ease-in;
}

<div
  className="emotion-2 emotion-3"
>
  <div
    className="emotion-0 emotion-1"
    style={
      Object {
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`<Progress /> Snapshots when indeterminate should render correctly 1`] = `
.emotion-2 {
  width: 100%;
  height: 0.375rem;
  background: #e1e4e5;
  border-radius: 0.375rem;
}

.emotion-0 {
  height: 100%;
  background: #2875c6 linear-gradient( 45deg, #2875c6 0%, #82e9ff 25%, #2875c6 75%, #82e9ff 100%);
  background-size: 400% 400%;
  border-radius: 0.375rem;
  -webkit-animation: progressBarAnimation 3s linear infinite;
  animation: progressBarAnimation 3s linear infinite;
  -webkit-transition: width 500ms ease-in;
  transition: width 500ms ease-in;
}

<div
  className="emotion-2 emotion-3"
>
  <div
    className="emotion-0 emotion-1"
    style={
      Object {
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`<Progress /> Snapshots when static should render correctly 1`] = `
.emotion-2 {
  width: 100%;
  height: 0.375rem;
  background: #e1e4e5;
  border-radius: 0.375rem;
}

.emotion-0 {
  height: 100%;
  background: #2875c6;
  border-radius: 0.375rem;
  -webkit-animation: progressBarAnimation 3s linear infinite;
  animation: progressBarAnimation 3s linear infinite;
  -webkit-transition: width 500ms ease-in;
  transition: width 500ms ease-in;
}

<div
  className="emotion-2 emotion-3"
>
  <div
    className="emotion-0 emotion-1"
    style={
      Object {
        "width": "0%",
      }
    }
  />
</div>
`;
